# static_assert_generic

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
