[package]
name = "static_assert_generic"
version = "0.1.0"
edition = "2021"
keywords = ["static", "assert", "const-generics"]
repository = "https://github.com/DavidO000/static_assert_generic"
description = "Static asserts involving const and type generics"
license = "0BSD"

[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"